# Reseaux

./: .gitignore
ClientAppBillet/: .classpath  .project
LaboReseauxBinome/: .dropbox  index.html
LaboReseauxBinome/BD_AIRPORT/: createDatabase.sql  populateDatabase.sql
LaboReseauxBinome/BD_JOURNALDEBORD/: CreateUser.sql  createDatabase.sql
LaboReseauxBinome/Evaluation1/: CMakeLists.txt  application_checkin.conf  dossier.docx  makefile  serveur_checkin.conf
LaboReseauxBinome/Evaluation1/Application_CheckIn/: Application_CheckIn.cpp  Application_CheckIn.h  CMakeLists.txt  ClientException.cpp  ClientException.h  Launcher.cpp  QuitApp.cpp  QuitApp.h
LaboReseauxBinome/Evaluation1/Database/: 362_03102017_lug.csv  Login.csv  Ticket.csv
LaboReseauxBinome/Evaluation1/Librairies/: CMakeLists.txt
LaboReseauxBinome/Evaluation1/Librairies/CIMP/: CIMP.cpp  CIMP.h
LaboReseauxBinome/Evaluation1/Librairies/CSV/: CsvHandler.cpp  CsvHandler.h  LoginCsvHandler.cpp  LoginCsvHandler.h  LuggageCsvHandler.cpp  LuggageCsvHandler.h  LuggageDatabase.cpp  LuggageDatabase.h  TicketCsvHandler.cpp  TicketCsvHandler.h
LaboReseauxBinome/Evaluation1/Librairies/Exceptions/: CIMPException.cpp  CIMPException.h  CsvException.cpp  CsvException.h  ErrnoException.cpp  ErrnoException.h  HostException.cpp  HostException.h  PropertiesException.cpp  PropertiesException.h  SocketException.cpp  SocketException.h
LaboReseauxBinome/Evaluation1/Librairies/Properties/: Properties.cpp  Properties.h
LaboReseauxBinome/Evaluation1/Librairies/SocketUtilities/: ClientSocket.cpp  ClientSocket.h  HostInfo.cpp  HostInfo.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h
LaboReseauxBinome/Evaluation1/Librairies/Tests/: CsvExceptionTest.cpp  CsvHandlerTest.cpp  ErrnoExceptionTest.cpp  HostInfoTest.cpp  LoginCsvHandlerTest.cpp  Properties.prop  PropertiesTest.cpp  logins.csv  test.cpp  test.csv
LaboReseauxBinome/Evaluation1/Serveur_CheckIn/: CMakeLists.txt  Launcher.cpp  ServerException.cpp  ServerException.h  Serveur_CheckIn.cpp  Serveur_CheckIn.h  Serveur_CheckInThread.cpp  Serveur_CheckInThread.h
LaboReseauxBinome/Evaluation2/: dossier.docx
LaboReseauxBinome/Evaluation2/APPLICATION_TEST_JDBC/nbproject/: project.properties
LaboReseauxBinome/Evaluation2/databaseUtilities/: build.xml
LaboReseauxBinome/Evaluation2/databaseUtilities/nbproject/: build-impl.xml  genfiles.properties  project.xml
LaboReseauxBinome/Evaluation3/: dossier.docx  serveurBagage.conf
LaboReseauxBinome/Evaluation3/Application_Bagages/nbproject/: genfiles.properties  project.properties  project.xml
LaboReseauxBinome/Evaluation3/LUGAP/nbproject/: build-impl.xml  genfiles.properties  project.properties
LaboReseauxBinome/Evaluation3/Serveur_Bagages/: build.xml
LaboReseauxBinome/Evaluation3/Serveur_Bagages/nbproject/: genfiles.properties  project.properties
LaboReseauxBinome/Evaluation4/: dossier.docx
LaboReseauxBinome/Evaluation4/Web_Applic_Billets/: build.xml
LaboReseauxBinome/Evaluation4/Web_Applic_Billets/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
LaboReseauxBinome/Evaluation4/Web_Applic_Billets/vpproject/: Web_Applic_Billets.vpp  Web_Applic_Billets.vpppath
LaboReseauxBinome/Evaluation4/Web_Applic_Billets/web/: login.html  loginErr.html  newUserErr.html
LaboReseauxBinome/Evaluation5/: ApplicationCIAChat.conf
LaboReseauxBinome/Evaluation5/Application_CIAChat/: Application_CIAChat_IN.cpp  Application_CIAChat_IN.h  CMakeLists.txt  ClientException.cpp  ClientException.h  IACOP.cpp  IACOP.h  IACOPException.cpp  IACOPException.h  Launcher.cpp  Message.cpp  Message.h  MulticastSocket.cpp  MulticastSocket.h  QuitApp.cpp  QuitApp.h  ThreadReception.cpp  ThreadReception.h
LaboReseauxBinome/Evaluation5/Application_JIAChat/nbproject/: project.properties
LaboReseauxBinome/Evaluation5/IACOP/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
LaboReseauxBinome/Evaluation5/Serveur_IAChat/: serveurIAChat.conf
LaboReseauxBinome/Evaluation5/Serveur_IAChat/nbproject/: project.properties
LaboReseauxBinome/Evaluation6/: serveurBillets.conf
LaboReseauxBinome/Evaluation6/Application_Billets/nbproject/: project.properties
LaboReseauxBinome/Evaluation6/Serveur_Billets/: build.xml
LaboReseauxBinome/Libraries/GenericFrames/: build.xml
LaboReseauxBinome/Libraries/GenericServer/: build.xml
LaboReseauxBinome/TestProject/nbproject/: project.properties
final eclipse/: .project
final eclipse/.metadata/: version.ini
final eclipse/.recommenders/caches/: identified-project-coordinates.json
final eclipse/Application_Billet/: .project
final eclipse/ClientBilletWeb/: .classpath  .project
final eclipse/ClientBilletWeb/WebContent/: login.html  loginErr.html  nouvelleUtilisateur.html  nouvelleUtilisateurErr.html
final eclipse/ClientIACOP/: .project
final eclipse/ClientLUGAP/: .project
final eclipse/Librairie/: .classpath  .project
final eclipse/Servers/Tomcat v8.0 Server at localhost-config/: server.xml
final eclipse/ServeurIACOP/: .project
final eclipse/Serveur_LUGAP/: .classpath  .project
final eclipse/test/WebContent/: index.html
final eclipse/test_JDBC/: .classpath
part_1/CheckIn-Cli/: CheckIn  Client.c  Client.conf  Network-Cli.c  Network-Cli.h  makefile
part_1/CheckIn-Server/: Libcsv.c  Libcsv.h  Login.csv  Network.c  Network.h  Serveur  Serveur.c  Tickets.csv  makefile  tcpsend.py
part_1/CheckIn_Serv/: CheckIn_Serv.cbp  CheckIn_Serv.layout  Libcsv.c  Libcsv.h  Network.c  Network.h  Serveur.conf  main.c
part_1/client/: main.cpp
part_1/serveur/: Server.h
part_2/Evaluation2(ancien)/BD_AIRPORT/: createDatabase.sql  populateDatabase.sql
part_2/Evaluation2(ancien)/BD_JOURNALDEBORD/: CreateRole.sql  populateDatabase.sql
part_3/Application_Bagages/nbproject/: build-impl.xml  project.properties
part_3/Evaluation3(ancien)/: dossier.docx  serveurBagage.conf
part_3/Evaluation3(ancien)/Application_Bagages/: build.xml
part_3/Evaluation3(ancien)/BD_AIRPORT/: createDatabase.sql  populateDatabase.sql
(+378 files in other folders)
